feat: complete initial network infrastructure (VPC, IGW, Subnet)

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 env:
-  TF_CLOUD_ORGANIZATION: "YOUR-ORGANIZATION-HERE"
+  TF_CLOUD_ORGANIZATION: "github_action_test" #"YOUR-ORGANIZATION-HERE"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "learn-terraform-github-actions"
   CONFIG_DIRECTORY: "./"
@@ -15,11 +15,10 @@ jobs:
     name: "Terraform Plan"
     runs-on: ubuntu-latest
     permissions:
-      # so GitHub can check out this repo using the default github.token
-      contents: read
-      pull-requests: write
+      contents: read #코드를 읽어올 수 있는 권한
+      pull-requests: write #PR에 댓글을 달 수 있는 권한
     steps:
-      - name: Checkout
+      - name: Checkout 
         uses: actions/checkout@v3
 
       - name: Upload Configuration
@@ -28,7 +27,7 @@ jobs:
         with:
           workspace: ${{ env.TF_WORKSPACE }}
           directory: ${{ env.CONFIG_DIRECTORY }}
-          speculative: true
+          speculative: true #테스트용
 
       - name: Create Plan Run
         uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
